--- a/DesafioFullstackBackend/DesafioFullstack/appsettings.json
+++ b/DesafioFullstackBackend/DesafioFullstack/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt":{
+    "Key": "Ab93Kz7hQpYt4Rf0-MnW8sVz6XyUjTg2"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=mydb;user=myuser;password=mypassword;"
-  }
+  } 
 }
